style(demo): Avoid misleading currentWidth size
The demo chart's width is determined before the y scrollbar appears,
which will mislead incorrect width after the rendering.
To avoid that, make to appear y scrollbars where its width can be
added when determining chart currentWidth.

[skip ci]

Ref #1237

--- a/demo/simple-sidebar.css
+++ b/demo/simple-sidebar.css
@@ -8,6 +8,9 @@
  h1,h2,h3,h4,nav,.chart_area p,#wrapper #sidebar-wrapper{font-family:Raleway,sans-serif;font-weight:normal}
  body {
      overflow-x: hidden;
+
+    /* https://github.com/naver/billboard.js/issues/1237 */
+    overflow-y: scroll;
  }
 
  /* Toggle Styles */
